--- a/static/styles/lounge.css
+++ b/static/styles/lounge.css
@@ -2,7 +2,12 @@
 
 
 .content-section {
-  padding: 20px;
+  flex: 0 0 auto;
+
+  margin: 0px auto;
+  padding: 50px 20px 20px;
+  width: 100%;
+  max-width: 560px;
 }
 
 .room-topic {
