--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -7,7 +7,7 @@
 body {
   margin: 0;
   padding: 0;
-  min-height: 100vh;100%;
+  min-height: 100vh;
 
   font-family: Arial, sans-serif;
 
@@ -18,7 +18,7 @@ body {
 }
 
 header {
-  flex: 0 1 auto;
+  flex: 0 0 auto;
 
   display: flex;
   flex-direction: column;
@@ -27,7 +27,7 @@ header {
 }
 
 main {
-  flex: 1 1 auto;
+  flex: 1 0 auto;
 
   display: flex;
   flex-direction: row;
@@ -63,7 +63,7 @@ main {
 }
 
 footer {
-  flex: 0 1 auto;
+  flex: 0 0 auto;
 
   background-color: #333;
   text-align: center;
