--- a/static/styles/room.css
+++ b/static/styles/room.css
@@ -94,7 +94,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-content: flex-start;
+  align-items: flex-start;
 
   margin: 15px 10px;
 }
@@ -143,7 +143,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  /*align-content: center;*/
+  /*align-items: center;*/
 }
 
 .input-section input {
